# capuronii

./: Cargo.toml  README.md
src/: alloc.rs  function.rs  lib.rs  list.rs  listdef.rs  math_impl.rs  symath.rs  test.rs
src/symath/: numeric.rs
src/symath/backends/: mod.rs  rust.rs
src/symath/numeric/: double_single.rs
tests/: test_runner.rs
