[package]
name = "capuronii"
version = "0.1.0"
edition = "2024"

[dependencies]
parse = { git = "https://github.com/fadaaszhi/ambavia", rev = "d12430221796499bfd34ac006985497a94e56b31" }
naga = { version = "26.0.0", features = ["msl-out", "hlsl-out"] }
typed-index-collections = "3.3.0"
replace_with = "0.1.8"
